--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_gradient_dashboard"
     tools:context="org.dslul.openboard.translator.pro.SettingsActivity">
 
     <LinearLayout
@@ -32,7 +32,7 @@
             android:paddingVertical="@dimen/padding"
             android:paddingEnd="@dimen/padding"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="@color/black" />
+            app:tint="@color/white" />
 
         <TextView
             android:layout_width="0dp"
@@ -40,7 +40,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/settings"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -98,6 +98,7 @@
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
+                android:backgroundTint="@color/colorSecondary"
                 android:elevation="2dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -117,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/share_app"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
                     android:drawableTint="@color/accent"
@@ -132,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
+                android:backgroundTint="@color/colorSecondary"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
                 android:gravity="center_vertical"
@@ -151,7 +153,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/feedback"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:drawableTint="@color/accent"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -165,6 +167,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/fab_padding"
+                android:backgroundTint="@color/colorSecondary"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
@@ -185,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/rate_us"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:drawableTint="@color/accent"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -209,6 +212,7 @@
                 android:id="@+id/llPrivacyPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorSecondary"
                 android:layout_marginHorizontal="@dimen/fab_padding"
                 android:layout_marginTop="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
@@ -230,7 +234,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/privacy_policy"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:drawableTint="@color/accent"
                     android:textSize="16sp"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
@@ -244,9 +248,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/fab_padding"
-                android:layout_marginTop="@dimen/padding"
+                android:layout_marginVertical="@dimen/padding"
                 android:background="@drawable/bg_main_less_rounded"
                 android:elevation="2dp"
+                android:backgroundTint="@color/colorSecondary"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/fab_padding"
@@ -264,7 +269,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/terms_of_use"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:drawableTint="@color/accent"
                     app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
