--- a/app/src/main/res/drawable/bg_accent_border_rounded.xml
+++ b/app/src/main/res/drawable/bg_accent_border_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/secondary_color" />
+    <solid android:color="@color/colorSecondary" />
     <stroke
         android:width="1dp"
         android:color="@color/accent" />
