--- a/app/src/main/res/layout/activity_display_favorites.xml
+++ b/app/src/main/res/layout/activity_display_favorites.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_gradient_dashboard"
     tools:context="org.dslul.openboard.translator.pro.DisplayFavoritesActivity">
 
     <LinearLayout
@@ -36,7 +36,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/black" />
+                app:tint="@color/white" />
 
             <TextView
                 android:layout_width="0dp"
@@ -44,7 +44,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/favorites"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
