--- a/app/src/main/res/layout/activity_display_history.xml
+++ b/app/src/main/res/layout/activity_display_history.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_gradient_dashboard"
     tools:context="org.dslul.openboard.translator.pro.DisplayHistoryActivity">
 
     <LinearLayout
@@ -36,7 +36,7 @@
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingEnd="@dimen/less_padding"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/black"
+                app:tint="@color/white"
                 android:contentDescription="@string/todo" />
 
             <TextView
@@ -45,7 +45,7 @@
                 android:layout_weight="1"
                 android:text="@string/history"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                 android:id="@+id/btnFav"
                 android:layout_width="@dimen/icon_size"
                 android:layout_height="@dimen/icon_size"
-                app:tint="@color/black"
+                app:tint="@color/white"
                 android:background="@drawable/bg_nothing_rounded_ripple"
                 android:paddingVertical="@dimen/less_padding"
                 android:paddingStart="@dimen/less_padding"
