--- a/app/src/main/res/layout/activity_enable_keyboard.xml
+++ b/app/src/main/res/layout/activity_enable_keyboard.xml
@@ -14,6 +14,7 @@
         android:layout_margin="@dimen/extra_padding"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/bg_main_less_rounded"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         android:elevation="@dimen/padding_10">
 
@@ -25,7 +26,7 @@
             android:layout_marginHorizontal="@dimen/fab_padding"
             android:gravity="center"
             android:text="Translator Pro Keyboard"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/_18sdp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/fab_padding"
                     android:text="Switch keyboard"
-                    android:textColor="@color/gray_700"
+                    android:textColor="@color/gray_400"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv"
