--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -61,7 +61,7 @@
             android:gravity="center"
             android:textSize="@dimen/_12sdp"
             android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
-            android:textColor="@color/gray_600"
+            android:textColor="@color/gray_400"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/quit"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
@@ -111,7 +111,7 @@
         android:layout_marginTop="@dimen/less_padding"
         android:gravity="center"
         android:text="@string/do_you_really_want_to_quit"
-        android:textColor="@color/gray_700"
+        android:textColor="@color/gray_400"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@id/llBtn"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +137,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_10"
             android:text="@string/yes"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
