--- a/app/src/main/res/layout/activity_language_selector.xml
+++ b/app/src/main/res/layout/activity_language_selector.xml
@@ -4,237 +4,206 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@color/colorPrimary"
     tools:context="org.dslul.openboard.translator.pro.LanguageSelectorActivity">
 
-    <FrameLayout
-        android:id="@+id/bannerFrame"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_native_ad"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bannerFrame">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/llTopBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
-                android:elevation="@dimen/padding_10"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/fab_padding"
-                android:paddingTop="@dimen/padding"
-                android:paddingBottom="@dimen/padding"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageButton
-                    android:id="@+id/btnBackLanguages"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    android:contentDescription="@string/todo"
-                    android:paddingVertical="@dimen/less_padding"
-                    android:paddingEnd="@dimen/less_padding"
-                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                    app:tint="@color/black" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="Select"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/language"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    android:paddingVertical="@dimen/less_padding"
-                    android:paddingStart="10dp"
-                    android:visibility="invisible"
-                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/fab_padding"
-                android:layout_marginTop="@dimen/padding"
-                android:background="@drawable/bg_main_rounded"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-
-                <TextView
-                    android:id="@+id/textViewLngFrom"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_rounded"
-                    android:gravity="center"
-                    android:padding="@dimen/padding_10"
-                    android:text="@string/english"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    tools:ignore="NestedWeights" />
-
-                <TextView
-                    android:id="@+id/textViewLngTo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_rounded"
-                    android:gravity="center"
-                    android:padding="@dimen/padding_10"
-                    android:text="@string/textview"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
-            </LinearLayout>
-
-            <SearchView
-                android:id="@+id/simpleSearchView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/fab_padding"
-                android:layout_marginTop="@dimen/padding"
-                android:background="@drawable/bg_main_rounded"
-                android:iconifiedByDefault="false"
-                android:queryBackground="@android:color/transparent"
-                android:queryHint="Search Language"
-                android:theme="@style/EditTextTheme" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="@dimen/fab_padding"
-                android:background="@drawable/bg_nothing_rounded_ripple"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewRecentlyUsedLng"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:elevation="@dimen/_14sdp"
-                    android:textColor="@color/gray_400"
-                    android:text="@string/recently_used"
-                    android:visibility="visible" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewRecentLanguages"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewRecentlyUsedLng"
-                    android:elevation="@dimen/_14sdp"
-                    android:paddingTop="@dimen/padding" />
-
-                <FrameLayout
-                    android:id="@+id/nativeAdFrameLayoutInBetween"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/padding"
-                    android:visibility="gone"
-                    android:elevation="@dimen/less_padding"
-                    app:layout_constraintTop_toBottomOf="@id/recyclerViewRecentLanguages"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvAllLanguages"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:elevation="@dimen/_14sdp"
-                    android:textColor="@color/gray_400"
-                    app:layout_constraintTop_toBottomOf="@id/nativeAdFrameLayoutInBetween"
-                    android:text="@string/all_languages" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewLanguages"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    app:layout_constraintTop_toBottomOf="@id/tvAllLanguages"
-                    app:layout_constraintBottom_toTopOf="@id/nativeAdFrame"
-                    android:elevation="@dimen/_14sdp" />
-
-                <FrameLayout
-                    android:id="@+id/nativeAdFrame"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/padding"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:elevation="@dimen/less_padding" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/pb"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_10"
-            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:animateLayoutChanges="true"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/icon_size"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:transitionName="anim_language"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ProgressBar
-                android:id="@+id/progressBar2"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:indeterminateTint="#f5f6fb" />
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="@dimen/_32sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_margin="@dimen/padding"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:padding="@dimen/less_padding"
+                android:scaleType="fitCenter"
+                android:transitionName="anim_btn_menu"
+                android:contentDescription="@string/todo"
+                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+                app:tint="@color/white" />
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvTitle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/downloading"
-                android:textColor="@color/accent"
-                android:textSize="17sp" />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/select"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <ImageButton
+                android:id="@+id/btnHistory"
+                android:layout_width="@dimen/_32sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_marginEnd="@dimen/padding"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:padding="@dimen/less_padding"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
+                app:tint="@color/white" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/line_color"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
         <LinearLayout
-            android:id="@+id/llDisableTouch"
+            android:id="@+id/ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/fab_padding"
+            android:layout_marginTop="@dimen/padding"
+            android:background="@drawable/bg_main_rounded"
+            android:gravity="center"
+            android:visibility="gone"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+
+            <TextView
+                android:id="@+id/tvLanguageFrom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg_rounded"
+                android:backgroundTint="?attr/colorSecondary"
+                android:gravity="center"
+                android:padding="@dimen/padding_10"
+                android:text="@string/english"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                tools:ignore="NestedWeights" />
+
+            <TextView
+                android:id="@+id/tvLanguageTo"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_rounded"
+                android:backgroundTint="?attr/colorSecondary"
+                android:gravity="center"
+                android:padding="@dimen/padding_10"
+                android:text="@string/textView"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <SearchView
+            android:id="@+id/simpleSearchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/fab_padding"
+            android:layout_marginTop="@dimen/padding"
+            android:background="@drawable/bg_main_rounded"
+            android:visibility="gone"
+            android:backgroundTint="?attr/colorSecondary"
+            android:iconifiedByDefault="false"
+            android:queryBackground="@android:color/transparent"
+            android:queryHint="Search Language"
+            android:theme="@style/EditTextTheme"
+            tools:ignore="RtlSymmetry" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:visibility="gone" />
+            android:layout_marginHorizontal="@dimen/fab_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:orientation="vertical">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/textViewRecentlyUsedLng"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/_14sdp"
+                android:text="@string/recently_used"
+                android:textColor="@color/accent"
+                android:layout_marginTop="@dimen/fab_padding"
+                android:paddingVertical="@dimen/less_padding"
+                android:paddingHorizontal="@dimen/padding"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewRecentLanguages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:elevation="@dimen/_14sdp"
+                android:paddingTop="@dimen/padding" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/all_languages"
+                android:layout_marginTop="@dimen/fab_padding"
+                android:paddingVertical="@dimen/less_padding"
+                android:paddingHorizontal="@dimen/padding"
+                android:textColor="@color/accent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewLanguages"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:elevation="@dimen/_14sdp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/pb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/padding_10"
+        android:background="@drawable/bg_nothing_rounded_ripple"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/icon_size"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="?attr/colorPrimary" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/downloading"
+            android:textColor="@color/accent"
+            android:textSize="17sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llDisableTouch"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
