--- a/app/src/main/res/layout/activity_phrasebook_detailed.xml
+++ b/app/src/main/res/layout/activity_phrasebook_detailed.xml
@@ -4,163 +4,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_gradient_dashboard"
     tools:context="org.dslul.openboard.translator.pro.PhrasebookDetailedActivity">
-
-    <FrameLayout
-        android:id="@+id/bannerFrame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_native_ad"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bannerFrame">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/llTopBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/padding_10"
             android:animateLayoutChanges="true"
-            android:elevation="@dimen/padding_10"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/fab_padding"
-            android:paddingTop="@dimen/padding"
-            android:paddingBottom="@dimen/padding"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/btnBackPhrasebook"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
+                android:id="@+id/btnBack"
+                android:layout_width="@dimen/_32sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_marginStart="@dimen/padding"
                 android:background="@drawable/bg_nothing_rounded_ripple"
                 android:contentDescription="@string/todo"
-                android:paddingVertical="@dimen/less_padding"
-                android:paddingEnd="@dimen/less_padding"
+                android:padding="@dimen/less_padding"
+                android:scaleType="fitCenter"
+                android:transitionName="anim_btn_menu"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/black" />
+                app:tint="@color/white" />
 
-            <TextView
-                android:id="@+id/tvHeading"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clLanguages"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/selector"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:transitionName="anim_cl_languages">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/llLanguageFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/fab_padding"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/ivSwitchLanguages"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tvLanguageFrom"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sf_pro_regular"
+                        android:padding="@dimen/padding"
+                        android:text="@string/english"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12sdp" />
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_arrow_down" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <ImageView
+                    android:id="@+id/ivSwitchLanguages"
+                    android:layout_width="@dimen/_36sdp"
+                    android:layout_height="@dimen/_24sdp"
+                    android:layout_margin="@dimen/fab_padding"
+                    android:background="@drawable/bg_btn_switch_languages"
+                    android:padding="@dimen/less_padding"
+                    android:paddingVertical="@dimen/_3sdp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_switch_languages"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/llLanguageTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/fab_padding"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/ivSwitchLanguages"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_arrow_down" />
+
+                    <TextView
+                        android:id="@+id/tvLanguageTo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sf_pro_regular"
+                        android:padding="@dimen/padding"
+                        android:text="@string/english"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12sdp" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ImageButton
-                android:id="@+id/btnSettingsScanResult"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
+                android:id="@+id/btnHistory"
+                android:layout_width="@dimen/_32sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_marginEnd="@dimen/padding"
                 android:background="@drawable/bg_nothing_rounded_ripple"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="20dp"
+                android:padding="@dimen/less_padding"
                 android:visibility="invisible"
-                app:srcCompat="@drawable/arrow_next" />
-
+                app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
+                app:tint="@color/white" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/fab_padding"
-            android:animateLayoutChanges="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/padding"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="15dp">
-
-            <LinearLayout
-                android:id="@+id/llLngFrom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_10"
-                android:layout_weight="1"
-                android:background="@drawable/ripple_effect_rounded"
-                android:gravity="center"
-                android:orientation="horizontal"
-                tools:targetApi="m">
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/flagFrom"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/kr_flag"
-                    app:shapeAppearanceOverlay="@style/roundedCorners" />
-
-                <TextView
-                    android:id="@+id/textViewLngFrom"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/padding_10"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:paddingVertical="@dimen/_7sdp"
-                    android:text="@string/english"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    tools:ignore="NestedWeights" />
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/btnSwitchLngs"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@drawable/ripple_effect_rounded"
-                android:contentDescription="@string/todo"
-                android:padding="@dimen/padding_10"
-                android:paddingVertical="20dp"
-                app:srcCompat="@drawable/ic_switch_lang"
-                app:tint="@color/black" />
-
-            <LinearLayout
-                android:id="@+id/llLngTo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_10"
-                android:layout_weight="1"
-                android:background="@drawable/ripple_effect_rounded"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textViewLngTo"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/padding_10"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:paddingVertical="@dimen/_7sdp"
-                    android:text="@string/textview"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    tools:ignore="NestedWeights" />
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/flagTo"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/kr_flag"
-                    app:shapeAppearanceOverlay="@style/roundedCorners" />
-
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height=".5dp"
+            android:background="@color/line_color"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -202,8 +172,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
