--- a/app/src/main/res/layout/activity_phrases.xml
+++ b/app/src/main/res/layout/activity_phrases.xml
@@ -4,193 +4,162 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_gradient_dashboard"
     tools:context="org.dslul.openboard.translator.pro.PhrasesActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/llTopBar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/nativeAdFrameLayout"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:animateLayoutChanges="true"
+        app:layout_constraintTop_toTopOf="parent"
+        android:transitionName="anim_cl_languages"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:id="@+id/llTopBar"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
+            android:layout_marginStart="@dimen/padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:contentDescription="@string/todo"
+            android:padding="@dimen/less_padding"
+            android:scaleType="fitCenter"
+            android:transitionName="anim_btn_menu"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/white" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clLanguages"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
-            android:elevation="@dimen/padding_10"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/fab_padding"
-            android:paddingTop="@dimen/padding"
-            android:paddingBottom="@dimen/padding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_weight="1"
+            android:transitionName="anim_cl_languages">
 
-            <ImageButton
-                android:id="@+id/btnBack"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                android:background="@drawable/bg_nothing_rounded_ripple"
-                android:contentDescription="@string/todo"
-                android:paddingVertical="@dimen/less_padding"
-                android:paddingEnd="@dimen/less_padding"
-                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="@color/black" />
-
-            <TextView
-                android:id="@+id/tvHeading"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/phrasebook"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-
-            <ImageButton
-                android:id="@+id/btnFavorite"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                android:background="@drawable/bg_nothing_rounded_ripple"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="20dp"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/ic_baseline_favorite_24" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/fab_padding"
-            android:animateLayoutChanges="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/padding"
-            app:layout_constraintTop_toBottomOf="@id/llTopBar">
-
-            <LinearLayout
-                android:id="@+id/llLngFrom"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/llLanguageFrom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_10"
-                android:layout_weight="1"
-                android:background="@drawable/ripple_effect_rounded"
+                android:layout_marginEnd="@dimen/fab_padding"
                 android:gravity="center"
                 android:orientation="horizontal"
-                tools:targetApi="m">
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/flagFrom"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/kr_flag"
-                    app:shapeAppearanceOverlay="@style/roundedCorners" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ivSwitchLanguages"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/textViewLngFrom"
-                    android:layout_width="0dp"
+                    android:id="@+id/tvLanguageFrom"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/padding_10"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:paddingVertical="@dimen/_7sdp"
+                    android:fontFamily="@font/sf_pro_regular"
+                    android:padding="@dimen/padding"
                     android:text="@string/english"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    tools:ignore="NestedWeights" />
-            </LinearLayout>
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp" />
+
+                <ImageView
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
+                    android:src="@drawable/ic_arrow_down" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <ImageView
-                android:id="@+id/btnSwitchLngs"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@drawable/ripple_effect_rounded"
-                android:contentDescription="@string/todo"
-                android:padding="@dimen/padding_10"
-                android:paddingVertical="20dp"
-                app:srcCompat="@drawable/ic_switch_lang"
-                app:tint="@color/black" />
+                android:id="@+id/ivSwitchLanguages"
+                android:layout_width="@dimen/_36sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:layout_margin="@dimen/fab_padding"
+                android:background="@drawable/bg_btn_switch_languages"
+                android:padding="@dimen/less_padding"
+                android:paddingVertical="@dimen/_3sdp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_switch_languages"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:id="@+id/llLngTo"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/llLanguageTo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_10"
-                android:layout_weight="1"
-                android:background="@drawable/ripple_effect_rounded"
+                android:layout_marginStart="@dimen/fab_padding"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ivSwitchLanguages"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
+                    android:src="@drawable/ic_arrow_down" />
 
                 <TextView
-                    android:id="@+id/textViewLngTo"
-                    android:layout_width="0dp"
+                    android:id="@+id/tvLanguageTo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/padding_10"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:paddingVertical="@dimen/_7sdp"
-                    android:text="@string/textview"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    tools:ignore="NestedWeights" />
+                    android:fontFamily="@font/sf_pro_regular"
+                    android:padding="@dimen/padding"
+                    android:text="@string/english"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp" />
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/flagTo"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/kr_flag"
-                    app:shapeAppearanceOverlay="@style/roundedCorners" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-            </LinearLayout>
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewPhraseBookMain"
+        <ImageButton
+            android:id="@+id/btnHistory"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
+            android:layout_marginEnd="@dimen/padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:padding="@dimen/less_padding"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
+            app:tint="@color/white" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPhraseBookMain"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:transitionName="anim_et_main"
+        android:paddingHorizontal="@dimen/fab_padding"
+        app:layout_constraintTop_toBottomOf="@+id/llTopBar"
+        app:layout_constraintBottom_toTopOf="@id/nativeAdFrameLayout" />
+
+    <LinearLayout
+        android:id="@+id/llPBPhrasebookFrag"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="@dimen/fab_padding"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingHorizontal="@dimen/fab_padding"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/accent" />
 
-        <LinearLayout
-            android:id="@+id/llPBPhrasebookFrag"
+        <TextView
+            android:id="@+id/textView13"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="@dimen/fab_padding"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:indeterminateTint="@color/accent" />
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/translating"
-                android:textColor="@color/accent" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/translating"
+            android:textColor="@color/accent" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/nativeAdFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
