--- a/app/src/main/res/layout/admob_native_layout_lctr.xml
+++ b/app/src/main/res/layout/admob_native_layout_lctr.xml
@@ -36,7 +36,6 @@
                     android:layout_width="@dimen/_45sdp"
                     android:layout_height="@dimen/_45sdp"
                     android:adjustViewBounds="true"
-                    android:background="@drawable/bg_ad_image"
                     app:shapeAppearanceOverlay="@style/lessRoundedCorners"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +57,7 @@
                     android:ellipsize="end"
                     android:maxLength="25"
                     android:maxLines="1"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@id/ad_body"
