--- a/app/src/main/res/layout/admob_small_native_ad_hctr.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_hctr.xml
@@ -39,7 +39,6 @@
                 android:id="@+id/ad_app_icon"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:background="@drawable/bg_ad_image"
                 android:src="@drawable/logo"
                 android:adjustViewBounds="true"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +62,7 @@
                     android:layout_marginStart="@dimen/padding"
                     android:maxLines="1"
                     android:text="@string/app_name"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
