--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/less_padding"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:paddingBottom="@dimen/less_padding">
+
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tvLngFromHistory"
@@ -24,11 +25,11 @@
             android:id="@+id/imageView2"
             android:layout_width="14sp"
             android:layout_height="14sp"
-            android:scaleType="fitCenter"
             android:layout_gravity="center"
             android:layout_marginHorizontal="@dimen/less_padding"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_baseline_navigate_next_24"
-            app:tint="@color/black" />
+            app:tint="@color/white" />
 
         <TextView
             android:id="@+id/tvLngToHistory"
@@ -43,19 +44,20 @@
         android:id="@+id/llMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_main_less_rounded"
         android:orientation="vertical"
+        android:backgroundTint="@color/colorSecondary"
         android:padding="@dimen/less_padding"
-        app:layout_constraintTop_toBottomOf="@+id/ll"
-        android:background="@drawable/bg_main_less_rounded">
+        app:layout_constraintTop_toBottomOf="@+id/ll">
 
         <TextView
             android:id="@+id/tvTextHistory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/accent"
             android:paddingStart="@dimen/padding_10"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
+            android:textColor="@color/accent"
             android:textSize="18sp"
             tools:ignore="RtlSymmetry" />
 
@@ -69,11 +71,11 @@
                 android:id="@+id/tvTranslationHistory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:paddingStart="@dimen/padding_10"
-                android:textSize="16sp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -84,40 +86,40 @@
                     android:id="@+id/btnCopyHistory"
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
+                    android:layout_marginEnd="@dimen/padding_10"
                     android:background="@drawable/bg_nothing_rounded_ripple"
-                    app:srcCompat="@drawable/ic_copy"
+                    android:padding="@dimen/padding"
                     android:scaleType="fitCenter"
-                    app:tint="@color/gray_700"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginEnd="@dimen/padding_10"
-                    android:padding="@dimen/padding" />
+                    app:srcCompat="@drawable/ic_copy"
+                    app:tint="@color/gray_700" />
 
                 <ImageButton
                     android:id="@+id/btnSpeakHistory"
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    android:scaleType="fitCenter"
                     android:layout_marginEnd="@dimen/padding_10"
+                    android:background="@drawable/bg_nothing_rounded_ripple"
                     android:padding="@dimen/padding"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/btnCopyHistory"
-                    app:tint="@color/gray_700"
-                    app:srcCompat="@drawable/ic_speak_ic" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_speak_ic"
+                    app:tint="@color/gray_700" />
 
                 <ImageButton
                     android:id="@+id/btnShareHistory"
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
-                    android:scaleType="fitCenter"
-                    android:padding="@dimen/padding"
                     android:background="@drawable/bg_nothing_rounded_ripple"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:padding="@dimen/padding"
+                    android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/btnSpeakHistory"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_baseline_share_24"
                     app:tint="@color/gray_700" />
 
@@ -125,14 +127,14 @@
                     android:id="@+id/btnFavoriteHistory"
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
-                    android:scaleType="fitCenter"
-                    android:padding="@dimen/padding"
                     android:background="@drawable/bg_nothing_rounded_ripple"
-                    app:tint="@color/gray_700"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:padding="@dimen/padding"
+                    android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_baseline_favorite_border_24"
+                    app:tint="@color/gray_700" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
@@ -144,9 +146,9 @@
         android:id="@+id/nativeAdFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_220sdp"
-        android:visibility="gone"
         android:layout_marginVertical="@dimen/padding"
-        app:layout_constraintTop_toBottomOf="@id/llMain"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
