--- a/app/src/main/res/layout/languages_list.xml
+++ b/app/src/main/res/layout/languages_list.xml
@@ -5,50 +5,76 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_nothing_rounded_ripple"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:clickable="true"
     android:gravity="center"
     android:focusable="true">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/flagView"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:scaleType="centerCrop"
-        android:padding="@dimen/less_padding"
-        app:shapeAppearanceOverlay="@style/roundedCorners"/>
-
-    <TextView
-        android:id="@+id/languageName"
-        android:layout_width="0dp"
-        android:paddingVertical="@dimen/fab_padding"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:text="@string/textview"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewPremium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_main_less_rounded"
-        android:paddingVertical="4dp"
-        android:textColor="@color/black"
-        android:visibility="gone"
-        android:backgroundTint="@color/accent"
-        android:paddingHorizontal="@dimen/padding"
-        android:text="@string/premium" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/flagView"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            app:shapeAppearanceOverlay="@style/roundedCorners"
+            android:scaleType="centerCrop"
+            android:padding="@dimen/less_padding"
+            android:layout_margin="@dimen/less_padding" />
 
-    <ImageView
-        android:id="@+id/btnSpeakTranslation"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:scaleType="center"
-        android:paddingHorizontal="@dimen/less_padding"
-        android:background="@drawable/bg_nothing_rounded_ripple"
-        android:src="@drawable/ic_speak_ic"
-        app:tint="@color/gray_400" />
+        <TextView
+            android:id="@+id/languageName"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:text="@string/textview"
+            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:paddingVertical="@dimen/fab_padding" />
+
+        <TextView
+            android:id="@+id/textViewPremium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_main_less_rounded"
+            android:paddingVertical="4dp"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            android:backgroundTint="@color/accent"
+            android:paddingHorizontal="@dimen/padding"
+            android:text="@string/premium" />
+
+        <ImageView
+            android:id="@+id/ivSelected"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:scaleType="center"
+            android:paddingHorizontal="@dimen/less_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:src="@drawable/ic_baseline_done_24"
+            android:visibility="invisible"
+            app:tint="@color/accent" />
+
+        <ImageView
+            android:id="@+id/btnSpeakTranslation"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:scaleType="center"
+            android:paddingHorizontal="@dimen/less_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:src="@drawable/ic_speak_ic"
+            app:tint="@color/white" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/line_color"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </LinearLayout>
