--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_main_less_rounded"
+        android:backgroundTint="@color/colorSecondary"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/fab_padding"
         android:paddingVertical="@dimen/padding">
@@ -25,7 +26,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="@string/app_name"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             tools:ignore="RtlSymmetry" />
 
         <LinearLayout
@@ -43,7 +44,7 @@
                 android:paddingTop="10dp"
                 android:text="@string/app_name"
                 android:paddingBottom="10dp"
-                android:textColor="@color/gray_700" />
+                android:textColor="@color/white" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
