--- a/app/src/main/res/drawable/bg_plain.xml
+++ b/app/src/main/res/drawable/bg_plain.xml
@@ -2,7 +2,8 @@
     <item
         android:id="@android:id/background" >
         <shape android:shape="rectangle">
-            <gradient android:startColor="#212121" android:endColor="#424242" android:angle="45"/>
+            <solid android:color="@color/white"/>
+            <stroke android:color="@color/gray_300" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
