--- a/app/src/main/res/layout/activity_pre_splash_screen.xml
+++ b/app/src/main/res/layout/activity_pre_splash_screen.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/Pro"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_18sdp"
                 android:textStyle="bold" />
 
@@ -70,7 +70,7 @@
             android:gravity="center"
             android:textSize="@dimen/_12sdp"
             android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
-            android:textColor="@color/btnColor"
+            android:textColor="@color/gray_600"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
